--- a/example/src/example.less
+++ b/example/src/example.less
@@ -12,3 +12,36 @@ body {
   box-sizing: border-box;
 }
 
+
+.nestedList {
+  ol {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+
+	&:not([start]) {
+	  counter-reset: item;
+	}
+  }
+
+  ol > li {
+	display: table;
+	counter-increment: item;
+	margin-bottom: 0.6em;
+  }
+
+  ol > li:before {
+	content: counters(item, ".") ". ";
+	display: table-cell;
+	padding-right: 0.6em;
+  }
+
+  li ol > li {
+	margin: 0;
+  }
+
+  li ol > li:before {
+	content: counters(item, ".") " ";
+  }
+}
+
