--- a/example/src/example.css
+++ b/example/src/example.css
@@ -3,13 +3,43 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
-  padding: 0px;
+  padding: 5px 10px 10px 10px;
   margin: 0px;
   background-color: lightgray;
 }
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+.pageStyle {
+  border: 1px solid gray;
+  background-color: #ffffff;
+}
+.doublePageStyle {
+  display: flex;
+  display: -webkit-flex;
+}
+@media print {
+  body {
+    color: #000;
+    background: #fff;
+    margin: 0px;
+    padding: 0px;
+    boder: 0px;
+    -webkit-print-color-adjust: exact;
+    width: 100%;
+    height: 100%;
+  }
+  .pageStyle {
+    border-width: 0px;
+    background-color: #ffffff;
+  }
+  .doublePageStyle {
+    display: block;
+  }
+  .hidden-print {
+    display: none !important;
+  }
 }
 .nestedList ol {
   list-style-type: none;
@@ -34,4 +64,99 @@ body {
 }
 .nestedList li ol > li:before {
   content: counters(item, ".") " ";
+}
+.SwipeViewsContainer {
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  overflow: hidden;
+}
+.SwipeViewsHeader {
+  min-height: 40px;
+  border-bottom: #F0F0F0 4px solid;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+}
+.SwipeViewsTabs {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  min-height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  margin-bottom: -4px;
+}
+.SwipeViewsTabs > ul {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  margin: 0;
+  padding: 0;
+}
+.SwipeViewsTab {
+  display: inline;
+  padding-top: 15px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  text-align: center;
+}
+.SwipeViewsTab > a {
+  text-decoration: none;
+  color: black;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.SwipeViewsTabs .active {
+  color: #FF6950;
+}
+.SwipeViewsInk {
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+  height: 4px;
+  background-color: #FF6950;
+  border-radius: 5px;
+}
+.SwipeViews {
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  overflow-x: hidden;
 }
