--- a/example/src/example.less
+++ b/example/src/example.less
@@ -1,3 +1,10 @@
+iframe {
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0px;
+  left:0px;
+}
 body {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
